# m4

./: .cvsignore  .gitattributes  .gitignore  .gitmodules  .prev-version  .x-sc_cast_of_argument_to_free  .x-sc_prohibit_always-defined_macros  .x-sc_require_config_h_first  .x-update-copyright  AUTHORS  BACKLOG  COPYING  ChangeLog  ChangeLog-2014  ChangeLog.old  Changelog  GNUmakefile  HACKING  LOCALE  Makefile.am  Makefile.cfg  Makefile.in  Makefile.maint  NEWS  NO-THANKS  README  README-alpha  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  bootstrap  bootstrap.conf  c-boxes.el  cfg.mk  commit  config-h.in  config.h.in  configure  (+8 more)
checks/: .cvsignore  .gitignore  01.define  02.arguments  02.define  03.arguments  04.arguments  05.arguments  06.arguments  06.pseudo_argu  07.pseudo_argu  08.pseudo_argu  09.pseudo_argu  10.pseudo_argu  11.pseudo_argu  11.undefine  12.defn  12.undefine  13.defn  13.pushdef  14.defn  14.pushdef  15.indir  15.pushdef  16.ifdef  16.pushdef  17.ifelse  17.indir  18.ifdef  18.ifelse  19.ifelse  19.loops  20.ifelse  20.loops  21.dumpdef  21.loops  22.loops  22.trace  23.dnl  23.dumpdef  (+81 more)
config/: .cvsignore  Makefile.am  debug.m4  error.m4  gmp.m4  gnu-obstack.m4  ltmain.sh  m4-error.m4  m4-gettext.m4  m4-obstack.m4  mailnotify  regex.m4  stackovf.m4
doc/: .cvsignore  .gitignore  Makefile.am  Makefile.in  STYLE  fdl-1.3.texi  helptoman.pl  m4.1  m4.info  m4.info-1  m4.info-2  m4.info-3  m4.texi  m4.texinfo  stamp-vti  texinfo.tex  version.texi
doc/examples/: COPYING  modtest.m4  shadow.m4  stdlib.m4  time.m4  time2.m4
examples/: .gitattributes  Makefile.am  Makefile.in  append.m4  capitalize.test  comments.test  ddivert.test  debug.test  defs  esyscmd.test  exp.test  foreach.m4  foreach.test  foreach2.m4  foreachq2.m4  foreachq3.m4  forloop.test  forloop2.m4  fstab.test  hanoi.test  include.test  indir.test  iso8859.test  loop.m4  misc.m4  misc.test  mktests.sh  modtest.m4  multiquotes.test  null.err  null.m4  null.out  patsubst.m4  patsubst.test  pushpop.test  regexp.test  reverse.test  shadow.m4  stack.m4  stack_sep.m4  (+9 more)
examples/WWW/: Makefile  _footer.htm  _header.htm  bugs.htm  changelog.htm  download.htm  features.htm  feedback.htm  index.htm  lists.htm  modules.htm  news.htm  readme.htm  thanks.htm  thissite.htm  todo.htm  uses.htm  visions.htm  whatis.htm
gnulib/: .cvsignore  Makefile.am  import
gnulib/acm4/: libtool.m4
gnulib/config/: .cvsignore  strndup.m4  xalloc.m4  xstrndup.m4
gnulib/m4/: .cvsignore  Makefile.am  gnulib.am  regex.c  version-etc.c  xalloc.h  xmalloc.c  xstrzdup.c
lib/: Makefile.am  Makefile.in  error.c  getdate.h  getopt.c  getopt.h  getopt1.c  m4error.c  m4error.h  m4module.c  m4module.h  m4obstack.c  m4private.h  m4regex.c  obstack.c  obstack.h  regex.c  regex.h  strtol.c  xmalloc.c  xstrdup.c
m4/: .cvsignore  .gitignore  Makefile.am  builtin.c  debug.c  error.c  error.h  eval.c  evalmp.c  evalparse.c  gnulib-cache.m4  hash.c  hash.h  input.c  list.c  list.h  ltdl.c  ltdl.h  m4.c  m4module.c  m4module.h  m4private.h  macro.c  module.c  obstack.c  obstack.h  output.c  path.c  regex.c  regex.h  resyntax.c  strtol.c  symtab.c  syntax.c  system-h.in  system.h  system_.h  utility.c  xmalloc.c  xstrdup.c  (+1 more)
modules/: .cvsignore  Makefile.am  Makefile.in  README  TODO  changeword.c  defs  evalparse.c  format.c  gnu.c  import.c  load.c  m4.c  m4.h  modfreeze.test  modpath1.test  modpath2.test  modpath3.test  modpath4.test  modtest.c  modtest.m4  modtest.test  mpeval.c  perl.c  perl.m4  shadow.c  shadow.m4  shadow.test  stdlib.c  stdlib.m4  test.c  test.m4  test.test  time.c  time.m4  time.test  time2.m4  traditional.c  unfrozen.m4  unload.test
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  builtin.c  builtin.h  debug.c  eval.c  evalmp.c  format.c  freeze.c  getopt.c  getopt1.c  input.c  m4.c  m4.h  m4private.h  macro.c  main.c  module.c  numb.c  numb.h  output.c  path.c  stackovf.c  symtab.c
tests/: .cvsignore  Makefile.am  Makefile.in  argument.1.test  argument.2.test  argument.3.test  argument.4.test  atconfig.in  atlocal.in  builtins.at  changeco.1.test  changeco.2.test  changequ.1.test  changequ.2.test  changequ.3.test  changesy.1.test  changesy.2.test  changesy.3.test  changesy.4.test  changesy.5.test  changesy.6.test  changesy.7.test  cleardiv.1.test  cleardiv.2.test  define.1.test  define.2.test  defn.1.test  defn.2.test  defs  divert.1.test  divert.2.test  divnum.1.test  dnl.1.test  dumpdef.1.test  errprint.1.test  errprint.2.test  esyscmd.1.test  eval.1.test  eval.2.test  format.1.test  (+54 more)
tests/generated-tests/: argument.1.test  argument.2.test  argument.3.test  argument.4.test  changeco.1.test  changeco.2.test  changequ.1.test  changequ.2.test  changequ.3.test  changesy.1.test  changesy.2.test  changesy.3.test  changesy.4.test  changesy.5.test  changesy.6.test  changesy.7.test  changesy.8.test  cleardiv.1.test  cleardiv.2.test  define.1.test  define.2.test  defn.1.test  defn.2.test  divert.1.test  divert.2.test  divnum.1.test  dnl.1.test  dumpdef.1.test  errprint.1.test  errprint.2.test  esyscmd.1.test  eval.1.test  eval.2.test  format.1.test  ifdef.1.test  ifelse.1.test  ifelse.2.test  include.1.test  include.2.test  include.3.test  (+28 more)
tests/gentest/: argument.1.m4  argument.1.test  argument.2.m4  argument.2.test  argument.3.m4  argument.3.test  argument.4.m4  argument.4.test  changeco.1.m4  changeco.1.test  changeco.2.m4  changeco.2.test  changequ.1.m4  changequ.1.test  changequ.2.m4  changequ.2.test  changequ.3.m4  changequ.3.test  changesy.1.m4  changesy.1.test  changesy.2.m4  changesy.2.test  changesy.3.m4  changesy.3.test  changesy.4.m4  changesy.4.test  changesy.5.m4  changesy.5.test  changesy.6.m4  changesy.6.test  changesy.7.m4  changesy.7.test  cleardiv.1.m4  cleardiv.1.test  cleardiv.2.m4  cleardiv.2.test  define.1.m4  define.1.test  define.2.m4  define.2.test  (+92 more)
tests/other-tests/: capitalize.test  changeword.test  comments.test  ddivert.test  debug.test  discard-comments.m4  discard-comments.test  esyscmd.test  exp.test  foreach.test  forloop.test  frozen.m4  fstab.test  gmp.m4  (+30 more)
(+116 files in other folders)
